* Setting debug to true now causes only '-debug' to be passed to ant's Main, rather than '-debug -verbose' (which would enable only -verbose, effectively)
* Various code cleanups

ArtifactsPublisher
----------------------
* Added publishOnFailure attribute to control the behavior on a failed build. Idea by James Nichols

build.xml (jsp)
----------------------
* Reverted to using 'war' as the default target instead of 'test'.
* Removed references to "**/element/" (CC-57). Patch by Jerome Lacoste
* Build products now created only under target & dist (CC-81). Patch by Jerome Lacoste
* Now uses forkmode="perBatch" for junit (available since Ant 1.6.2)

build.xml (main)
----------------------
* Build products now created only under target & dist (CC-81). Patch by Jerome Lacoste

BuildQueue
----------------------
* Add support for multiple build threads (ThreadQueue). Patch by Jared Richardson

checkstyle (use in CC build)
----------------------
* Remove header check as per discussion of copyright.

ClearCaseBootstrapper
----------------------
* fixed /dev/nul to /dev/null (CC-76). Patch by Esa Laine 

compile.xsl
----------------------
* Support ant-contrib's "compilewithwalls" task. Patch by Paul McLachlan

Contrib
----------------------
* A Windows system tray icon for monitoring a CruiseControl build process. Contributed by Ivan Moore.
* A NTServiceWrapper for running CruiseControl as an NT service. Contributed by Nick Chalko.

CruiseControl
----------------------
* Now obeys to Checkstyle 3.4 rules HideUtilityClassConstructor and FinalClass (CC-56). Patch by Jerome Lacoste
* Removed support for -upgrade parameter to update CruiseControl 1.x config files.

CruiseControlControllerAgent
----------------------
* Uses new JMXConnectorServer instead of RmiAdapter because of MX4J upgrade. Patch by Mark Doliner

cruisecontrol-jsp12.tld
----------------------
* Fix id attribute typo for LinkTag. Patch by Gareth Reakes

CurrentBuildStatusBootstrapper & Publisher