@@ -55,7 +55,6 @@ LIBDIR=${PROJECTDIR}/lib
 #--------------------------------------------
 
 CLASSPATH=lib/ant.jar:lib/ant-junit.jar:lib/ant-launcher.jar:lib/junit.jar:lib/xerces.jar
-echo ${CLASSPATH}
 
 # Try to find Java Home directory, from JAVA_HOME environment 
 # or java executable found in PATH
@@ -68,8 +67,7 @@ if test -z "${JAVA_HOME}" ; then
 fi
 
 # convert the existing path to unix
-if [ "$OSTYPE" = "cygwin32" ] || [ "$OSTYPE" = "cygwin" ] ; then
-   CLASSPATH=`cygpath --path --unix "$CLASSPATH"`
+if [ `uname | grep -n CYGWIN` ]; then
    JAVA_HOME=`cygpath --path --unix "$JAVA_HOME"`
 fi
 
@@ -84,10 +82,11 @@ if test -f ${JAVA_HOME}/lib/tools.jar ; then
 fi
 
 # convert the unix path to windows
-if [ "$OSTYPE" = "cygwin32" ] || [ "$OSTYPE" = "cygwin" ] ; then
+if [ `uname | grep -n CYGWIN` ]; then
    CLASSPATH=`cygpath --path --windows "$CLASSPATH"`
-   JAVA_HOME=`cygpath --path --windows "$JAVA_HOME"`
 fi
+
+echo ${CLASSPATH}
 
 # Call Ant
 ${JAVABIN} -cp "${CLASSPATH}" org.apache.tools.ant.Main \
